Fix mobile scrolling
Fix mobile scrolling too far.
Resolves #32.

--- a/src/LondonTravel.Site/assets/styles/css/site.css
+++ b/src/LondonTravel.Site/assets/styles/css/site.css
@@ -4,7 +4,6 @@
 */
 
 body {
-    min-height: 2000px;
     padding-top: 70px;
 }
 
